--- a/index.html
+++ b/index.html
@@ -131,72 +131,71 @@ table{
         </tr>
     </table>
     <h2>RTL</h2>
-    <!-- 
     <table cellpadding="0" cellspacing="0">
     	<tr>
         	<th class="number">No.</th>
             <th>Page Name</th>
-            <th class="project-detail">Html5/RTL/Booststrap 3</th>
+            <th class="rtl/project-detail">Html5/RTL/Booststrap 3</th>
             <th>Status</th>
             <th>Approved</th>
         </tr>
         <tr>
         	<td>1</td>
-            <td><a href="authors.html" target="_blank">Authors</a></td>
+            <td><a href="rtl/authors.html" target="_blank">Authors</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
         <tr>
         	<td>2</td>
-            <td><a href="authors-details.html" target="_blank">Authors Details</a></td>
+            <td><a href="rtl/authors-details.html" target="_blank">Authors Details</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
         <tr>
         	<td>3</td>
-             <td><a href="picture.html" target="_blank">Picture</a></td>
+             <td><a href="rtl/picture.html" target="_blank">Picture</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
         <tr>
         	<td>4</td>
-             <td><a href="picture-quote-detail.html" target="_blank">Gallery</a></td>
+             <td><a href="rtl/picture-quote-detail.html" target="_blank">Gallery</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
         <tr>
         	<td>5</td>
-             <td><a href="quote-basket.html" target="_blank">Quote Basket</a></td>
+             <td><a href="rtl/quote-basket.html" target="_blank">Quote Basket</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
         <tr>
         	<td>5</td>
-             <td><a href="quote-tabs.html" target="_blank">Quote Tabs</a></td>
+             <td><a href="rtl/quote-tabs.html" target="_blank">Quote Tabs</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
         <tr>
         	<td>5</td>
-             <td><a href="quote-topics.html" target="_blank">Quote Topics</a></td>
+             <td><a href="rtl/quote-topics.html" target="_blank">Quote Topics</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
         <tr>
         	<td>5</td>
-             <td><a href="top-list.html" target="_blank">Top List</a></td>
+             <td><a href="rtl/top-list.html" target="_blank">Top List</a></td>
             <td>Yes</td>
             <td>Completed</td>
             <td>Not yet</td>
         </tr>
-    </table> -->
+    </table>
         
 </div><!--container -->
 
