--- a/picture-quote-detail.html
+++ b/picture-quote-detail.html
@@ -143,7 +143,15 @@
                         <a href="#" class="icon-star active"></a>
                         <a href="#" class="icon-star"></a>
                     </div>
-                    <img src="images/fb-social-plugin.jpg" alt="" />
+                    <div id="fb-root"></div>
+					<script>(function(d, s, id) {
+					  var js, fjs = d.getElementsByTagName(s)[0];
+					  if (d.getElementById(id)) return;
+					  js = d.createElement(s); js.id = id;
+					  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+					  fjs.parentNode.insertBefore(js, fjs);
+					}(document, 'script', 'facebook-jssdk'));</script>
+					<div class="fb-comments" data-href="http://www.facebook.com" data-numposts="5"></div>
               </div>
           </div>
           <div class="col-sm-3">
