--- a/quote-tabs.html
+++ b/quote-tabs.html
@@ -152,9 +152,15 @@
                                 </div><!-- tag-bar -->
                                 <div class="like-bar row">
                                 	<div class="col-sm-12">
-                                        <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                        <span><img alt="" src="images/fb.jpg"></span>
-                                        5 people like this. Sign Up to see what your friends like.</p>
+                                        <div id="fb-root"></div>
+											<script>(function(d, s, id) {
+											  var js, fjs = d.getElementsByTagName(s)[0];
+											  if (d.getElementById(id)) return;
+											  js = d.createElement(s); js.id = id;
+											  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+											  fjs.parentNode.insertBefore(js, fjs);
+											}(document, 'script', 'facebook-jssdk'));</script>
+											<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	                                </div>
                                 </div><!-- like-bar -->
                             </div><!-- quote-text-section -->
@@ -174,9 +180,15 @@
                                 </div><!-- tag-bar -->
                                 <div class="like-bar row">
                                 	<div class="col-sm-12">
-                                        <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                        <span><img alt="" src="images/fb.jpg"></span>
-                                        5 people like this. Sign Up to see what your friends like.</p>
+                                        <div id="fb-root"></div>
+											<script>(function(d, s, id) {
+											  var js, fjs = d.getElementsByTagName(s)[0];
+											  if (d.getElementById(id)) return;
+											  js = d.createElement(s); js.id = id;
+											  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+											  fjs.parentNode.insertBefore(js, fjs);
+											}(document, 'script', 'facebook-jssdk'));</script>
+											<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	                                </div>
                                 </div><!-- like-bar -->
                             </div><!-- quote-text-section -->
@@ -196,9 +208,15 @@
                                 </div><!-- tag-bar -->
                                 <div class="like-bar row">
                                 	<div class="col-sm-12">
-                                        <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                        <span><img alt="" src="images/fb.jpg"></span>
-                                        5 people like this. Sign Up to see what your friends like.</p>
+                                        <div id="fb-root"></div>
+											<script>(function(d, s, id) {
+											  var js, fjs = d.getElementsByTagName(s)[0];
+											  if (d.getElementById(id)) return;
+											  js = d.createElement(s); js.id = id;
+											  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+											  fjs.parentNode.insertBefore(js, fjs);
+											}(document, 'script', 'facebook-jssdk'));</script>
+											<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	                                </div>
                                 </div><!-- like-bar -->
                             </div><!-- quote-text-section -->
@@ -218,9 +236,15 @@
                                 </div><!-- tag-bar -->
                                 <div class="like-bar row">
                                 	<div class="col-sm-12">
-                                        <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                        <span><img alt="" src="images/fb.jpg"></span>
-                                        5 people like this. Sign Up to see what your friends like.</p>
+                                        <div id="fb-root"></div>
+											<script>(function(d, s, id) {
+											  var js, fjs = d.getElementsByTagName(s)[0];
+											  if (d.getElementById(id)) return;
+											  js = d.createElement(s); js.id = id;
+											  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+											  fjs.parentNode.insertBefore(js, fjs);
+											}(document, 'script', 'facebook-jssdk'));</script>
+											<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	                                </div>
                                 </div><!-- like-bar -->
                             </div><!-- quote-text-section -->
@@ -240,9 +264,15 @@
                                 </div><!-- tag-bar -->
                                 <div class="like-bar row">
                                 	<div class="col-sm-12">
-                                        <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                        <span><img alt="" src="images/fb.jpg"></span>
-                                        5 people like this. Sign Up to see what your friends like.</p>
+                                        <div id="fb-root"></div>
+											<script>(function(d, s, id) {
+											  var js, fjs = d.getElementsByTagName(s)[0];
+											  if (d.getElementById(id)) return;
+											  js = d.createElement(s); js.id = id;
+											  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+											  fjs.parentNode.insertBefore(js, fjs);
+											}(document, 'script', 'facebook-jssdk'));</script>
+											<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	                                </div>
                                 </div><!-- like-bar -->
                             </div><!-- quote-text-section -->
@@ -262,9 +292,15 @@
                                 </div><!-- tag-bar -->
                                 <div class="like-bar row">
                                 	<div class="col-sm-12">
-                                        <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                        <span><img alt="" src="images/fb.jpg"></span>
-                                        5 people like this. Sign Up to see what your friends like.</p>
+                                        <div id="fb-root"></div>
+											<script>(function(d, s, id) {
+											  var js, fjs = d.getElementsByTagName(s)[0];
+											  if (d.getElementById(id)) return;
+											  js = d.createElement(s); js.id = id;
+											  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+											  fjs.parentNode.insertBefore(js, fjs);
+											}(document, 'script', 'facebook-jssdk'));</script>
+											<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 	                                </div>
                                 </div><!-- like-bar -->
                             </div><!-- quote-text-section -->
