--- a/quote-topics-rtl.html
+++ b/quote-topics-rtl.html
@@ -84,8 +84,8 @@
 	<div class="container">
     	<div class="row">
 	        <div class="col-sm-4 pull-right text-right">
-            	<a href="#" class="btn-white">Register</a>
-                <a href="#" class="btn-white">Login</a>
+            	<a href="#myModal-2" role="button"  data-toggle="modal" class="btn-white">Register</a>
+                <a href="#myModal" role="button"  data-toggle="modal" class="btn-white">Login</a>
             </div>
         	<div class="col-sm-8">
                 <nav>
@@ -165,9 +165,16 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <div id="fb-root"></div>
+								<script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -187,9 +194,15 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+   								<script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -209,9 +222,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -231,9 +249,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -253,9 +276,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -275,9 +303,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -475,6 +508,55 @@
 <!--footer end -->
 
 </div><!--container-fluid -->
+<div id="myModal" class="modal fade signin-model" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="model-wrap">
+        <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">Log In</h3>
+        </div>
+        <div class="modal-body">
+            <form  class="row">
+                <div class="col-sm-12">
+                <label>Enter Your Email Address</label>    
+                <p><input type="text" placeholder="Plese Enter Your Email Address" class="form-control"></p>
+                <label>Enter Your Password</label>    
+                <p><input type="text" placeholder="Password" class="form-control"></p>
+                <p class="clearfix"><button class="btn btn-primary col-sm-6">Log In</button></p>
+                <p><label>OR</label></p>
+                <p class="clearfix"><button class="btn btn-primary col-sm-6"><span class="icon-facebook"></span> Log In with Facebook</button></p>
+                <p class="clearfix"><button class="btn btn-info col-sm-6"><span class="icon-twitter"></span> Log In with Twitter </button></p>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
+
+
+<div id="myModal-2" class="modal fade signin-model" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="model-wrap">
+        <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h3 id="myModalLabel">Register</h3>
+        </div>
+        <div class="modal-body">
+            <form  class="row">
+                <div class="col-sm-12">
+                    <label>Name</label>    
+                    <p><input type="text" placeholder="Full Name" class="form-control"></p>
+                    <label>User Name</label>    
+                    <p><input type="text" placeholder="Choose a User Name" class="form-control"></p>
+                    <label>Email Address</label>    
+                    <p><input type="text" placeholder="Plese Enter Your Email Address" class="form-control"></p>
+                    <label>Password</label>    
+                    <p><input type="text" placeholder="Password" class="form-control"></p>
+                    <label>Confirm Password</label>    
+                    <p><input type="text" placeholder="Confirm Password" class="form-control"></p>
+                    <button class="btn btn-primary col-sm-6 col-xs-6">Register</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
