--- a/quote-topics.html
+++ b/quote-topics.html
@@ -165,9 +165,16 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <div id="fb-root"></div>
+								<script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -187,9 +194,15 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+   								<script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -209,9 +222,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -231,9 +249,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -253,9 +276,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
@@ -275,9 +303,14 @@
                         </div><!-- tag-bar -->
                         <div class="like-bar row">
                             <div class="col-sm-12">
-                                <p><span><img alt="" src="images/like.jpg"><img alt="" src="images/send.jpg"></span>
-                                <span><img alt="" src="images/fb.jpg"></span>
-                                5 people like this. Sign Up to see what your friends like.</p>
+                                <script>(function(d, s, id) {
+                                  var js, fjs = d.getElementsByTagName(s)[0];
+                                  if (d.getElementById(id)) return;
+                                  js = d.createElement(s); js.id = id;
+                                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=1427754394118810";
+                                  fjs.parentNode.insertBefore(js, fjs);
+                                }(document, 'script', 'facebook-jssdk'));</script>
+                                <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
                             </div>
                         </div><!-- like-bar -->
                     </div><!-- quote-text-section -->
